--- a/FindAPet2/app/views/root/index.html.erb
+++ b/FindAPet2/app/views/root/index.html.erb
@@ -1,1 +1,10 @@
-<h1>hello world</h1>
+<div class="root-container"	>
+	<h1 class="root-header"> WORKOUT LOGGER </h1>
+	<div class="link-container">
+		<div class="root-form">
+			<%= button_to 'View Pets', pets_path(@pets), :class => "root-link", :method => :get %>		
+		</div>
+	</div>
+
+	<footer class="root-footer">Made by Dan Levenson, 2017</footer>
+</div>
