--- a/FindAPet2/app/views/users/new.html.erb
+++ b/FindAPet2/app/views/users/new.html.erb
@@ -9,6 +9,22 @@
 		minlength: User::PASSWORD_LENGTH.begin,
 		maxlength: User::PASSWORD_LENGTH.end %>
 
+	<%= f.text_field :f_name, placeholder: 'First Name', required: true %>
+
+	<%= f.text_field :l_name, placeholder: 'Last Name', required: true %>
+
+	<%= f.text_field :address, placeholder: 'Address', required: true %>
+
+	<%= f.text_field :city, placeholder: 'City', required: true %>
+
+	<%= f.text_field :state, placeholder: 'State', required: true %>
+
+	<%= f.text_field :zip, placeholder: 'Zip Code', required: true %>
+
+	<%= f.phone_field :phone, placeholder: 'Phone Number', required: true %>
+
+	<%= f.email_field :email, placeholder: 'Email Address', required: true %>
+
 	<%= submit_tag 'Create Account!' %>
 <% end %>
 
