--- a/FindAPet2/app/views/layouts/application.html.erb
+++ b/FindAPet2/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   		<div class="nav">
   			<%if current_user %>
   				<h1><%= current_user.username %></h1>
-  				<%= link_to 'Log Out', new_session_path %>
+  				<%= link_to 'Log Out', session_path, method: :delete %>
   				<%= link_to 'My Posts', pets_path %>
   				<%= link_to 'Create Post', new_pet_path %>
   				<%= link_to 'View Pets', root_path %>
