updated nav bar link order

--- a/FindAPet2/app/views/layouts/application.html.erb
+++ b/FindAPet2/app/views/layouts/application.html.erb
@@ -13,14 +13,13 @@
   		<div class="nav">
   			<%if current_user %>
   				<h1><%= current_user.username %></h1>
-  				<%= link_to 'Log Out', session_path, method: :delete %>
-  				<%= link_to 'My Posts', pets_path %>
-  				<%= link_to 'Create Post', new_pet_path %>
-  				<%= link_to 'View Pets', root_path %>
+  				<%= link_to 'Pets', root_path %>
+          <%= link_to 'View Profile', pets_path %>
+          <%= link_to 'Log Out', session_path, method: :delete %>
   			<% else %>
-  				<%= link_to 'Log In', new_session_path %>
-  				<%= link_to 'Register', new_user_path %>
-  				<%= link_to 'View Pets', root_path %>
+          <%= link_to 'Pets', root_path %>
+  				<%= link_to 'Login', new_session_path %>
+  				<%= link_to 'Register', new_user_path %>	
   			<% end %>
   		</div>
   	</div>
