set up link to new pet route

--- a/FindAPet2/app/views/users/_form.html.erb
+++ b/FindAPet2/app/views/users/_form.html.erb
@@ -7,7 +7,7 @@
 		<p class="pet-field">Breed:  <%= f.text_field :breed, placeholder: "Breed", required: true, :class => 'pet-field' %></p>
 		<p class="pet-field">Age:  <%= f.number_field :age, placeholder: "Age", required: true, :class => 'pet-field' %></p>
 		<p class="pet-field">Description:  <%= f.text_field :description, placeholder: "Tell us more about your pet.", required: true, :class => 'pet-description' %></p>
-		<%= f.submit "Create Post", :class => 'show-link' %>
+		<%= f.submit "Submit", :class => 'show-link' %>
 	<% end %>
 </div>
 
