--- a/FindAPet2/app/views/users/show.html.erb
+++ b/FindAPet2/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1> sup bro </h1>
 <div>
-	<%= render partial: 'form' %>
+	<%= button_to 'Add Post', new_pet_path(@pet), :class => "show-link", :method => :get %>
 </div>
+
