--- a/FindAPet2/app/views/layouts/application.html.erb
+++ b/FindAPet2/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   			<%if current_user %>
   				<h1><%= current_user.username %></h1>
   				<%= link_to 'Pets', root_path %>
-          <%= link_to 'View Profile', pets_path %>
+          <%= link_to 'View Profile', users_path %>
           <%= link_to 'Log Out', session_path, method: :delete %>
   			<% else %>
           <%= link_to 'Pets', root_path %>
