--- a/FindAPet2/app/views/pets/show.html.erb
+++ b/FindAPet2/app/views/pets/show.html.erb
@@ -1,1 +1,17 @@
-<h1> test </h1>
+<div class="show-container">
+	<div class="show-form">
+		<%= button_to 'View Pets', pets_path(@pets), :class => "show-link", :method => :get %>
+	</div>
+	<div class="show-subcont">
+		<div class="show-info">
+			<h3 class="pet-header"><%= @pet.name %></h3>
+			<h5 class="pet-info"><%= @pet.name %></h5>
+			<h5 class="pet-info"><%= @pet.post_type %></h5>
+			<p class="pet-para"><%= @pet.foster_length %></p>
+			<h5 class="pet-info"><%= @pet.animal %></h5>
+			<h5 class="pet-info"><%= @pet.breed %></h5>
+			<h5 class="pet-info"><%= @pet.age %> years old</h5>
+			<h5 class="pet-info"><%= @pet.description %></h5>
+		</div>
+	</div>
+</div>
