updated user controller and routes

--- a/FindAPet2/app/views/users/show.html.erb
+++ b/FindAPet2/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 		<p class="pet-para"><%= @pet.foster_length %></p>
 		<h5 class="pet-info"><%= @pet.animal %></h5>
 		<h5 class="pet-info"><%= @pet.breed %></h5>
-		<h5 class="pet-info"><%= @pet.age %> years old,</h5>
+		<h5 class="pet-info"><%= @pet.age %> years old</h5>
 		<h5 class="pet-info"><%= @pet.description %></h5>
 	</div>
 </div>
