--- a/FindAPet2/app/views/users/index.html.erb
+++ b/FindAPet2/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <h3>Users</h3>
 
+<%= button_to 'Edit Profile', edit_user_path(@user), :method => :get %>
 <%= button_to 'Add Pet', new_pet_path(@pet), :method => :get %>
 
 <% if @pets.empty? %>
