--- a/FindAPet2/app/views/users/new.html.erb
+++ b/FindAPet2/app/views/users/new.html.erb
@@ -1,31 +1,5 @@
 <h2>Create an account: </h2>
 
-<%= form_for @user do |f| %>
-	<%= f.text_field :username, placeholder: 'Username', required: true,
-		minlength: User::USERNAME_LENGTH.begin,
-		maxlength: User::USERNAME_LENGTH.end %>
-
-	<%= f.password_field :password, placeholder: 'Password', required: true,
-		minlength: User::PASSWORD_LENGTH.begin,
-		maxlength: User::PASSWORD_LENGTH.end %>
-
-	<%= f.text_field :f_name, placeholder: 'First Name', required: true %>
-
-	<%= f.text_field :l_name, placeholder: 'Last Name', required: true %>
-
-	<%= f.text_field :address, placeholder: 'Address', required: true %>
-
-	<%= f.text_field :city, placeholder: 'City', required: true %>
-
-	<%= f.text_field :state, placeholder: 'State', required: true %>
-
-	<%= f.text_field :zip, placeholder: 'Zip Code', required: true %>
-
-	<%= f.phone_field :phone, placeholder: 'Phone Number', required: true %>
-
-	<%= f.email_field :email, placeholder: 'Email Address', required: true %>
-
-	<%= submit_tag 'Create Account!' %>
-<% end %>
+<%= render partial: 'form' %>
 
 Already have an account? <%= link_to 'Click here to sign in!', new_session_path %>
