--- a/FindAPet2/app/views/pets/_form.html.erb
+++ b/FindAPet2/app/views/pets/_form.html.erb
@@ -7,7 +7,7 @@
 		<p class="pet-field">Breed:  <%= f.text_field :breed, placeholder: "Breed", required: true, :class => 'pet-field' %></p>
 		<p class="pet-field">Age:  <%= f.number_field :age, placeholder: "Age", required: true, :class => 'pet-field' %></p>
 		<p class="pet-field">Description:  <%= f.text_field :description, placeholder: "Tell us more about your pet.", required: true, :class => 'pet-description' %></p>
-		<p class="pet-field">Picture:  <%= f.file_field :image %></p>
+		<p class="pet-field">Picture:  <%= f.file_field :picture %></p>
 		<%= f.submit "Submit", :class => 'show-link' %>
 	<% end %>
 </div>
