--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,21 +9,23 @@
   </head>
 
   <body>
-  	<div class="container">
+      <div class="header-container">
+        <h1 class="header">Find-A-Pet 2.0</h1>
+      </div>
   		<div class="nav">
   			<%if current_user %>
   				<h1><%= current_user.username %></h1>
-  				<%= link_to 'Pets', pets_path %>
-          <%= link_to 'View Profile', users_path %>
-          <%= link_to 'Log Out', session_path, method: :delete %>
+  				<%= link_to 'Pets', pets_path, :class => "nav-link" %>
+          <%= link_to 'View Profile', users_path, :class => "nav-link" %>
+          <%= link_to 'Log Out', session_path, method: :delete, :class => "nav-link" %>
   			<% else %>
-          <%= link_to 'Pets', root_path %>
-  				<%= link_to 'Login', new_session_path %>
-  				<%= link_to 'Register', new_user_path %>	
+          <%= link_to 'Pets', pets_path, :class => "nav-link" %>
+  				<%= link_to 'Login', new_session_path, :class => "nav-link" %>
+  				<%= link_to 'Register', new_user_path, :class => "nav-link" %>	
   			<% end %>
   		</div>
-  	</div>
 
     <%= yield %>
+    <footer class="main-footer">Made by Dan Levenson, 2018</
   </body>
 </html>
