--- a/app/views/root/index.html.erb
+++ b/app/views/root/index.html.erb
@@ -1,10 +1,7 @@
 <div class="root-container"	>
-	<h1 class="root-header"> WORKOUT LOGGER </h1>
 	<div class="link-container">
 		<div class="root-form">
-			<%= button_to 'View Pets', pets_path(@pets), :class => "root-link", :method => :get %>		
+			<%= image_tag 'https://i.imgur.com/tBmEltj.jpg', :class => "main-img" %>
 		</div>
 	</div>
-
-	<footer class="root-footer">Made by Dan Levenson, 2017</footer>
 </div>
