--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,6 @@
       </div>
   		<div class="nav">
   			<%if current_user %>
-  				<h1><%= current_user.username %></h1>
   				<%= link_to 'Pets', pets_path, :class => "nav-link" %>
           <%= link_to 'View Profile', users_path, :class => "nav-link" %>
           <%= link_to 'Log Out', session_path, method: :delete, :class => "nav-link" %>
@@ -26,6 +25,6 @@
   		</div>
 
     <%= yield %>
-    <footer class="main-footer">Made by Dan Levenson, 2018</
+    <footer class="footer">Made by Dan Levenson, 2018</
   </body>
 </html>
