--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,4 +1,4 @@
-<h3 class="pet-header">Available Pets</h3>
+<h3 class="list-header">Available Pets</h3>
 
 <div class="list-container">
 	<% @pets.each do |pet| %>
