--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,20 +1,17 @@
 <div class="show-container">
-	<div class="show-form">
-		<%= button_to 'View Pets', pets_path(@pets), :class => "show-link", :method => :get %>
-	</div>
 	<div class="show-subcont">
 		<div class="show-info">
 			<h3 class="pet-header"><%= @pet.name %></h3>
-			<h5 class="pet-info"><%= @pet.name %></h5>
-			<h5 class="pet-info"><%= @pet.post_type %></h5>
-			<p class="pet-para"><%= @pet.foster_length %></p>
-			<h5 class="pet-info"><%= @pet.animal %></h5>
-			<h5 class="pet-info"><%= @pet.breed %></h5>
-			<h5 class="pet-info"><%= @pet.age %> years old</h5>
-			<h5 class="pet-info"><%= @pet.description %></h5>			
+			<h5 class="pet-info">Name:  <%= @pet.name %></h5>
+			<h5 class="pet-info">Post Type: <%= @pet.post_type %></h5>
+			<p class="pet-info"><%= @pet.foster_length %></p>
+			<h5 class="pet-info">Animal:  <%= @pet.animal %></h5>
+			<h5 class="pet-info">Breed:  <%= @pet.breed %></h5>
+			<h5 class="pet-info">Age:  <%= @pet.age %> years old</h5>
+			<h5 class="pet-info">Description:  <%= @pet.description %></h5>			
 		</div>
-		<div class="picture">
-			<%= image_tag @pet.picture.url(:medium) %>
+		<div class="pet-picture">
+			<%= image_tag @pet.picture.url(:medium), alt: "No Picture Available" %>
 		</div>
 	</div>
 </div>
