--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -51,6 +51,40 @@ body {
 	color: #EF3E4A;
 }
 
+.create-container {
+	height: 550px;
+	width: 1000px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+}
+
+.pet-field {
+	color: #117ACA;
+	font-family: 'Quicksand', sans-serif;
+	font-size: 18px;
+	font-weight: bolder;
+}
+
+.pet-input {
+	height: 18px;
+}
+
+.pet-description {
+	width: 150px;
+}
+
+.form-link {
+	color: #117ACA;
+	font-size: 20px;
+	margin-left: 50px;
+}
+
+.form-link:hover {
+	color: #EF3E4A;
+}
+
 .list-container {
 	height: 550px;
 	width: 200px;
