--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,29 +1,31 @@
-<div>
+<div class="reg-form">
 	<%= form_for @user do |f| %>
 		<%= f.text_field :username, placeholder: 'Username', required: true,
+			:class=>"register-field",
 			minlength: User::USERNAME_LENGTH.begin,
 			maxlength: User::USERNAME_LENGTH.end %>
 
 		<%= f.password_field :password, placeholder: 'Password', required: true,
+			:class=>"register-field",
 			minlength: User::PASSWORD_LENGTH.begin,
 			maxlength: User::PASSWORD_LENGTH.end %>
 
-		<%= f.text_field :f_name, placeholder: 'First Name', required: true %>
+		<%= f.text_field :f_name, placeholder: 'First Name', required: true, :class=>"register-field" %>
 
-		<%= f.text_field :l_name, placeholder: 'Last Name', required: true %>
+		<%= f.text_field :l_name, placeholder: 'Last Name', required: true, :class=>"register-field" %>
 
-		<%= f.text_field :address, placeholder: 'Address', required: true %>
+		<%= f.text_field :address, placeholder: 'Address', required: true, :class=>"register-field" %>
 
-		<%= f.text_field :city, placeholder: 'City', required: true %>
+		<%= f.text_field :city, placeholder: 'City', required: true, :class=>"register-field" %>
 
-		<%= f.text_field :state, placeholder: 'State', required: true %>
+		<%= f.text_field :state, placeholder: 'State', required: true, :class=>"register-field" %>
 
-		<%= f.text_field :zip, placeholder: 'Zip Code', required: true %>
+		<%= f.text_field :zip, placeholder: 'Zip Code', required: true, :class=>"register-field" %>
 
-		<%= f.phone_field :phone, placeholder: 'Phone Number', required: true %>
+		<%= f.phone_field :phone, placeholder: 'Phone Number', required: true, :class=>"register-field" %>
 
-		<%= f.email_field :email, placeholder: 'Email Address', required: true %>
+		<%= f.email_field :email, placeholder: 'Email Address', required: true, :class=>"register-field" %>
 
-		<%= submit_tag 'Submit' %>
+		<%= submit_tag 'Submit', :class=>"form-link" %>
 	<% end %>
 </div>
