fixed session/new view

--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -92,7 +92,7 @@ body {
 .reg-link {
 	color: #117ACA;
 	font-size: 24px;
-	padding-top: 150px;
+	/*padding-top: 150px;*/
 	background-color: #EF3E4A;
 	width: 200px;
 }
