--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,6 +26,6 @@
 
 		<%= f.email_field :email, placeholder: 'Email Address', required: true, :class=>"register-field" %>
 
-		<%= submit_tag 'Submit', :class=>"form-link" %>
+		<%= submit_tag 'Submit', :class=>"reg-link" %>
 	<% end %>
 </div>
