--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,19 +1,20 @@
-<h3>Users</h3>
-
-<%= button_to 'Edit Profile', edit_user_path(@user), :method => :get %>
-<%= button_to 'Add Pet', new_pet_path(@pet), :method => :get %>
-
-<% if @pets.empty? %>
-	<h1>No posts made</h1>
-<% else %>
-	<div>
-		<% @pets.each do |pet| %>
-			<div>
-				<ul>
-					<li><%= link_to pet.name, user_path(pet)  %></li>
-				</ul>
-			</div>
-		<% end %>
+<div class="create-container">
+	<div class="profile-nav">
+	<%= button_to 'Edit Profile', edit_user_path(@user), :method => :get, :class=>"profile-link" %>
+	<%= button_to 'Add Pet', new_pet_path(@pet), :method => :get, :class=>"profile-link" %>
 	</div>
-<% end %>
-
+	<% if @pets.empty? %>
+		<h5 class="profile-header">No posts made</h5>
+	<% else %>
+		<div>
+			<h5 class="profile-header">Created Posts</h5>
+			<% @pets.each do |pet| %>				
+				<div>
+					<ul>
+						<li class="pet-li"><%= link_to pet.name, user_path(pet)  %></li>
+					</ul>
+				</div>
+			<% end %>
+		</div>
+	<% end %>
+</div>
