--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -151,6 +151,14 @@ body {
 	letter-spacing: 1px;
 }
 
+.delete-link {
+	color: #117ACA;
+	font-size: 24px;
+	margin-left: 50px;
+	margin-top: 150px;
+	background-color: #EF3E4A;
+}
+
 .form-container {
 	margin-bottom: 200px;
 }
