--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,14 +1,10 @@
-<div class="edit-container">
-	<h1 class="edit-header">Find-A-Pet</h1>
-	<div class="edit-form">
-		<%= button_to 'View Posts', users_path(@pets), :class => "edit-link", :method => :get %>
-	</div>
-	<h3 class="edit-subheader">Edit Post Below: </h3>
+<div class="register-container">
+	<h3 class="pet-header">Edit Post Below: </h3>
 		<div class="edit-subcont">
 			<%= render partial: 'form' %>
 		</div>
 	<div class="edit-form">
 		<%= form_for @user, :class => "edit-link", html: {method: 'delete'} do |f| %>
-			<%= f.submit "Delete Account", :class => "edit-link" %>
+			<%= f.submit "Delete Account", :class => "form-link" %>
 		<% end %>
 </div>
