updated destroy#userscontroller so it also deletes posts associated with account

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,6 +5,6 @@
 		</div>
 	<div class="edit-form">
 		<%= form_for @user, :class => "edit-link", html: {method: 'delete'} do |f| %>
-			<%= f.submit "Delete Account", :class => "form-link" %>
+			<%= f.submit "Delete Account", :class => "delete-link" %>
 		<% end %>
 </div>
