added link to contact poster

--- a/app/assets/stylesheets/root.scss
+++ b/app/assets/stylesheets/root.scss
@@ -205,6 +205,13 @@ body {
 	margin-left: 50px;
 }
 
+.contact-email {
+	margin-left: 39%;
+	color: #117ACA;
+	font-family: 'Quicksand', sans-serif;
+	font-weight: bolder;
+}
+
 .list-container {
 	height: 550px;
 	width: 200px;
