changed landing page, added welcome message

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,3 +1,6 @@
+<h3 class="list-header">Welcome to Find-A-Pet!</h3>
+<p class="pet-info" style="text-align: center; font-weight: bolder;">Find-A-Pet is a one stop shop to find pets that are available for adoption or need to be fostered! <br />  Below is a list of the pets currently available, simply click on the name to learn more! </p>
+
 <h3 class="list-header">Available Pets</h3>
 
 <div class="list-container">
